force-app/main/default/objects/SBQQ__LookupData__c/fields/Corrente_Curto_Circuito__c.field-meta.xml
<CustomField>
    <fullName>Corrente_Curto_Circuito__c</fullName>
    <label>Corrente Curto Circuito</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>