force-app/main/default/objects/SBQQ__LookupData__c/fields/country_factor__c.field-meta.xml
<CustomField>
    <fullName>country_factor__c</fullName>
    <label>country factor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>